--- a/functions/package.json
+++ b/functions/package.json
@@ -13,9 +13,9 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@google/generative-ai": "^0.16.0",
     "firebase-admin": "^12.1.0",
-    "firebase-functions": "^5.0.1",
-    "node-fetch": "^2.7.0"
+    "firebase-functions": "^5.0.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.2.0"
