--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,7 @@
     "public": "out",
     "ignore": [
       "firebase.json",
+      "firestore.rules",
       "**/.*",
       "**/node_modules/**"
     ],
