--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "firebase-admin": "^12.3.0",
+    "firebase-functions": "^5.1.1",
     "framer-motion": "^11.5.7",
     "genkit": "1.21.0",
     "lucide-react": "^0.475.0",
