Your Next.js project uses the src/app directory, but your Firebase confi

--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "hosting": {
     "site": "careerlens-1",
-    "public": "public",
+    "public": "src/.next",
     "ignore": [
       "firebase.json",
       "**/.*",
