repo runs perfectly locally (npm run dev or npm run build && npm start)

--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "hosting": {
     "site": "careerlens-1",
-    "public": "src/.next",
+    "public": ".next",
     "ignore": [
       "firebase.json",
       "**/.*",
