--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.1.3",
-    "react-speech-recognition": "^3.10.0",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
@@ -43,19 +42,25 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "file-saver": "^2.0.5",
     "firebase": "^11.9.1",
     "firebase-admin": "^12.3.0",
     "firebase-functions": "^5.1.1",
     "framer-motion": "^11.5.7",
     "genkit": "1.21.0",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.475.0",
+    "mammoth": "^1.11.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
+    "pdf-parse": "^2.4.5",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-use-measure": "^2.1.1",
+    "react-speech-recognition": "^3.10.0",
+    "react-use-measure": "^2.1.7",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
@@ -67,11 +72,11 @@
     "@types/react-dom": "^18",
     "@types/react-speech-recognition": "^3.9.5",
     "@types/regenerator-runtime": "^0.13.6",
+    "firebase-functions-test": "^3.3.0",
     "genkit-cli": "1.21.0",
     "postcss": "^8",
     "regenerator-runtime": "^0.14.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "firebase-functions-test": "^3.3.0"
+    "typescript": "^5"
   }
 }
