--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -4,4 +4,9 @@
 runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
-  maxInstances: 1
+  maxInstances: 3
+  minInstances: 0
+  # Set environment variables
+  env:
+    - variable: NODE_ENV
+      value: production
