--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "firebase-functions": "^5.1.1",
     "framer-motion": "^11.18.2",
     "genkit": "1.21.0",
+    "googleapis": "^140.0.1",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.475.0",
