--- a/functions/package.json
+++ b/functions/package.json
@@ -19,7 +19,10 @@
     "firebase-functions": "^5.1.1",
     "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
-    "@google-cloud/firestore": "^7.0.0"
+    "@google-cloud/firestore": "^7.0.0",
+    "@google-cloud/vertexai": "^1.1.0",
+    "node-fetch": "^3.3.2",
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
