--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@genkit-ai/next": "1.21.0",
     "@google/generative-ai": "^0.16.0",
     "@hookform/resolvers": "^4.1.3",
+    "@next/eslint-plugin-next": "^16.0.2",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -53,7 +54,7 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.475.0",
     "mammoth": "^1.11.0",
-    "next": "15.3.3",
+    "next": "^15.3.3",
     "patch-package": "^8.0.0",
     "pdf-parse": "^2.4.5",
     "react": "^18.3.1",
@@ -73,6 +74,7 @@
     "@types/react-dom": "^18",
     "@types/react-speech-recognition": "^3.9.5",
     "@types/regenerator-runtime": "^0.13.6",
+    "eslint": "^9.39.1",
     "firebase-functions-test": "^3.3.0",
     "genkit-cli": "1.21.0",
     "postcss": "^8",
