--- a/firebase.json
+++ b/firebase.json
@@ -14,10 +14,17 @@
       }
     ]
   },
-  "functions": {
+  "functions": [{
     "source": "functions",
-    "runtime": "nodejs20"
-  },
+    "runtime": "nodejs20",
+    "ignore": [
+      "node_modules",
+      ".git",
+      "firebase-debug.log",
+      "firebase-debug.*.log",
+      "*.local"
+    ]
+  }],
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
