--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@genkit-ai/google-genai": "1.21.0",
     "@genkit-ai/next": "1.21.0",
-    "@google/generative-ai": "^0.16.0",
+    "@google-cloud/vertexai": "^1.10.0",
+    "@google/generative-ai": "^0.16.1",
     "@hookform/resolvers": "^4.1.3",
     "@next/eslint-plugin-next": "^16.0.2",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -39,8 +40,10 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-google-maps/api": "^2.19.3",
+    "@types/dagre": "^0.7.53",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dagre": "^0.8.5",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "file-saver": "^2.0.5",
@@ -50,7 +53,8 @@
     "framer-motion": "^11.18.2",
     "genkit": "1.21.0",
     "googleapis": "^140.0.1",
-    "jspdf": "^3.0.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.475.0",
     "mammoth": "^1.11.0",
@@ -63,6 +67,7 @@
     "react-hook-form": "^7.54.2",
     "react-speech-recognition": "^3.10.0",
     "react-use-measure": "^2.1.7",
+    "reactflow": "^11.11.4",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
