--- a/functions/package.json
+++ b/functions/package.json
@@ -15,19 +15,21 @@
     "node": "20"
   },
   "dependencies": {
-    "firebase-admin": "^12.3.0",
-    "firebase-functions": "^5.1.1",
-    "axios": "^1.6.0",
-    "cheerio": "^1.0.0-rc.12",
     "@google-cloud/firestore": "^7.0.0",
     "@google-cloud/vertexai": "^1.1.0",
+    "axios": "^1.6.0",
+    "cheerio": "^1.0.0-rc.12",
+    "firebase-admin": "^12.3.0",
+    "firebase-functions": "^5.1.1",
     "node-fetch": "^3.3.2",
     "rss-parser": "^3.13.0"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.35",
     "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "firebase-functions-test": "^3.3.0"
+    "@types/node-fetch": "^2.6.13",
+    "firebase-functions-test": "^3.3.0",
+    "typescript": "^5.0.0"
   },
   "private": true
 }
