--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -49,8 +49,9 @@ env:
     value: career_data
   
   # News & Search APIs (Uncomment and set secrets to enable)
-  - variable: NEWS_API_KEY
-    secret: NEWS_API_KEY
+  # Temporarily disabled - uncomment after setting the secret
+  # - variable: NEWS_API_KEY
+  #   secret: NEWS_API_KEY
   # - variable: GOOGLE_CUSTOM_SEARCH_API_KEY
   #   secret: GOOGLE_CUSTOM_SEARCH_API_KEY
   # - variable: GOOGLE_CUSTOM_SEARCH_ENGINE_ID
